--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
       "request": "launch",
       "args": [],
       "stopAtEntry": false,
-      "externalConsole": true,
+      "externalConsole": false,
       "cwd": "d:/Code/C++/test",
       "program": "d:/Code/C++/test/build/Debug/outDebug",
       "MIMode": "gdb",
