--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -59,6 +59,9 @@
   "files.associations": {
     "iostream": "cpp",
     "ostream": "cpp",
-    "cmath": "cpp"
+    "cmath": "cpp",
+    "deque": "cpp",
+    "string": "cpp",
+    "vector": "cpp"
   }
 }
